--- a/app/src/main/res/layout/item_writing_community_image.xml
+++ b/app/src/main/res/layout/item_writing_community_image.xml
@@ -17,9 +17,10 @@
         app:layout_constraintTop_toTopOf="parent" >
         <ImageView
             android:id="@+id/item_writing_community_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/community_image_upload"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,10 +32,34 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:src="@drawable/community_cancel_upload_image"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="5dp"
         app:layout_constraintTop_toTopOf="@id/item_writing_community_image_cardView"
         app:layout_constraintEnd_toEndOf="@id/item_writing_community_image_cardView"/>
+
+    <FrameLayout
+        android:id="@+id/representative_label"
+        android:layout_width="0dp"
+        android:layout_height="15dp"
+        app:layout_constraintBottom_toBottomOf="@id/item_writing_community_image_cardView"
+        app:layout_constraintStart_toStartOf="@id/item_writing_community_image_cardView"
+        app:layout_constraintEnd_toEndOf="@id/item_writing_community_image_cardView">
+
+        <View
+            android:id="@+id/representative_label_view"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"
+            android:background="@drawable/representative_label_background"/>
+        <TextView
+            android:id="@+id/representative_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="대표"
+            android:textColor="@color/white"
+            android:textSize="9dp"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
