--- a/app/src/main/res/layout/bottomsheet_map.xml
+++ b/app/src/main/res/layout/bottomsheet_map.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nestedScrollView"
+    android:id="@+id/bottomsheet_map"
+    android:background="@drawable/bottomsheet_style"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -157,7 +158,7 @@
         app:layout_constraintEnd_toEndOf="@id/iv_share"
         android:text="공유"/>
 
-<!--    관리기관명-->
+    <!--    관리기관명-->
     <ImageView
         android:id="@+id/iv_manage"
         android:layout_width="wrap_content"
@@ -178,7 +179,7 @@
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@id/tv_call"
         app:layout_constraintStart_toEndOf="@+id/iv_manage"
-         />
+        />
 
     <TextView
         android:id="@+id/tv_manage_institution"
@@ -200,7 +201,7 @@
         app:layout_constraintStart_toEndOf="@id/tv_manage_institution"
         app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
 
-<!--    번호-->
+    <!--    번호-->
     <ImageView
         android:id="@+id/iv_call_complaint"
         android:layout_width="wrap_content"
@@ -253,7 +254,6 @@
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/tv_number_title"
         android:layout_marginTop="44dp" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
