--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -43,7 +43,7 @@
 
     <ImageView
         android:id="@+id/btn_kakao_login"
-        android:src="@drawable/kakao_login"
+        android:src="@drawable/kakao_login_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
