--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -40,7 +40,7 @@
             android:text="완료"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="#888886"
+            android:textColor="@color/gray_scale5"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             app:layout_constraintTop_toTopOf="parent"
@@ -50,7 +50,7 @@
             android:id="@+id/divider1"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="#D7D7D5"
+            android:background="@color/gray_scale4"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_name_tv"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -59,32 +59,60 @@
             android:id="@+id/community_writing_category_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="게시글의 카테고리를 선택해주세요"
+            android:text="게시글의 카테고리를 선택해주세요."
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="#888886"
+            android:textColor="@color/gray_scale5"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider1"
             app:layout_constraintStart_toStartOf="parent"/>
 
+        <ImageView
+            android:id="@+id/community_writing_category_under_btn"
+            android:layout_width="14dp"
+            android:layout_height="7dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/under_vector"
+            app:layout_constraintBottom_toBottomOf="@id/community_writing_category_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/community_writing_category_tv" />
+
+        <FrameLayout
+            android:id="@+id/category_dialog_container"
+            android:layout_width="250dp"
+            android:layout_height="248dp"
+            android:visibility="gone"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/community_writing_category_under_btn"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <include
+                layout="@layout/dialog_select_category" />
+        </FrameLayout>
+
+
         <View
             android:id="@+id/divider2"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="#D7D7D5"
+            android:background="@color/gray_scale4"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_category_tv"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
+        <EditText
             android:id="@+id/community_writing_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="제목을 작성해 주세요"
+            android:hint="제목을 작성해 주세요"
+            android:background="@android:color/transparent"
+            android:inputType="none"
+            android:singleLine="true"
             android:textSize="16sp"
             android:textStyle="bold"
-            android:textColor="#888886"
+            android:textColor="@color/gray_scale5"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider2"
@@ -94,7 +122,7 @@
             android:id="@+id/divider3"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="#D7D7D5"
+            android:background="@color/gray_scale4"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_title_tv"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -123,7 +151,7 @@
             android:id="@+id/divider4"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:background="#D7D7D5"
+            android:background="@color/gray_scale4"
             android:layout_marginTop="15dp"
             app:layout_constraintTop_toBottomOf="@id/community_writing_image_select"
             app:layout_constraintStart_toStartOf="parent"/>
