--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="gray_scale1">#F7F7F7</color>
 
     <color name="red">#FF4C13</color>
+    <color name="blue">#136DF3</color>
+
 
 
 </resources>
