--- a/app/src/main/res/layout/bottomsheet_map.xml
+++ b/app/src/main/res/layout/bottomsheet_map.xml
@@ -43,6 +43,7 @@
         />
     <TextView
         android:id="@+id/tv_star"
+        style="@style/Body3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="4.41(15)"
@@ -64,6 +65,7 @@
 
     <TextView
         android:id="@+id/tv_time"
+        style="@style/Body3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="(평일) 0:00 ~ 24:00"
@@ -89,7 +91,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
+        android:layout_marginBottom="20dp"
         android:textColor="@color/gray_scale8"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_call"
         app:layout_constraintStart_toStartOf="@id/iv_call"
         app:layout_constraintEnd_toEndOf="@id/iv_call"
@@ -111,6 +115,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:textColor="@color/gray_scale8"
+        app:layout_constraintBottom_toBottomOf="@id/tv_call"
         app:layout_constraintTop_toBottomOf="@id/iv_bookmark"
         app:layout_constraintStart_toStartOf="@id/iv_bookmark"
         app:layout_constraintEnd_toEndOf="@id/iv_bookmark"
@@ -132,6 +137,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
         android:textColor="@color/gray_scale8"
+        app:layout_constraintBottom_toBottomOf="@id/tv_call"
         app:layout_constraintTop_toBottomOf="@id/iv_guide"
         app:layout_constraintStart_toStartOf="@id/iv_guide"
         app:layout_constraintEnd_toEndOf="@id/iv_guide"
@@ -153,107 +159,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray_scale8"
+        app:layout_constraintBottom_toBottomOf="@id/tv_call"
         app:layout_constraintTop_toBottomOf="@id/iv_share"
         app:layout_constraintStart_toStartOf="@id/iv_share"
         app:layout_constraintEnd_toEndOf="@id/iv_share"
         android:text="공유"/>
-
-    <!--    관리기관명-->
-    <ImageView
-        android:id="@+id/iv_manage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/iv_manage"
-        android:layout_marginStart="14dp"
-        app:layout_constraintTop_toTopOf="@id/tv_manage_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/tv_manage_title"
-        />
-    <TextView
-        android:id="@+id/tv_manage_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="관리기관명"
-        android:textColor="@color/gray_scale8"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_call"
-        app:layout_constraintStart_toEndOf="@+id/iv_manage"
-        />
-
-    <TextView
-        android:id="@+id/tv_manage_institution"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="서대문구청"
-        android:textColor="@color/gray_scale8"
-        android:layout_marginStart="20dp"
-        app:layout_constraintStart_toEndOf="@id/tv_manage_title"
-        app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
-
-    <TextView
-        android:id="@+id/tv_manage_copy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/copy"
-        android:textColor="@color/gray_scale5"
-        android:layout_marginStart="14dp"
-        app:layout_constraintStart_toEndOf="@id/tv_manage_institution"
-        app:layout_constraintTop_toTopOf="@id/tv_manage_title" />
-
-    <!--    번호-->
-    <ImageView
-        android:id="@+id/iv_call_complaint"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/iv_call_complaint"
-        android:layout_marginStart="22dp"
-        app:layout_constraintTop_toTopOf="@id/tv_number_title"
-        app:layout_constraintStart_toStartOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/tv_number_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="번호"
-        android:textColor="@color/gray_scale8"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_manage_title"
-        app:layout_constraintStart_toStartOf="@id/tv_manage_title" />
-
-    <TextView
-        android:id="@+id/tv_number_institution"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0507-1380-1266"
-        android:textColor="@color/gray_scale8"
-        app:layout_constraintStart_toStartOf="@id/tv_manage_institution"
-        app:layout_constraintStart_toEndOf="@id/tv_manage_title"
-        app:layout_constraintTop_toTopOf="@id/tv_number_title" />
-
-    <TextView
-        android:id="@+id/tv_number_copy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/copy"
-        android:textColor="@color/gray_scale5"
-        android:layout_marginStart="14dp"
-        app:layout_constraintStart_toEndOf="@id/tv_number_institution"
-        app:layout_constraintTop_toTopOf="@id/tv_number_title" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_write_complaint"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/complaint"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/button_style"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toBottomOf="@id/tv_number_title"
-        android:layout_marginTop="44dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
