--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -194,6 +194,18 @@
                 android:text="계정 설정"
                 android:layout_gravity="center"
                 android:layout_marginStart="8dp" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이름, 연락처 비밀번호 등"
+                android:layout_gravity="center" />
         </LinearLayout>
 
         <LinearLayout
@@ -333,7 +345,6 @@
             android:background="@color/gray_scale3"
             app:layout_constraintTop_toBottomOf="@+id/btn_logout"
             />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
