--- a/app/src/main/res/layout/activity_community_writing.xml
+++ b/app/src/main/res/layout/activity_community_writing.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".presentation.view.community.CommunityWritingActivity">
+    tools:context=".presentation.view.community.CommunityWritingActivity"
+    android:id="@+id/activity_community_writing">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,7 +38,7 @@
             android:id="@+id/community_writing_finish_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="완료"
+            android:text="등록"
             android:textSize="16sp"
             android:textStyle="bold"
             android:textColor="@color/gray_scale5"
@@ -55,28 +56,20 @@
             app:layout_constraintTop_toBottomOf="@id/community_writing_name_tv"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/community_writing_category_tv"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/community_select_category"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="게시글의 카테고리를 선택해주세요."
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/gray_scale5"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="20dp"
-            app:layout_constraintTop_toBottomOf="@id/divider1"
-            app:layout_constraintStart_toStartOf="parent"/>
-
-        <ImageView
-            android:id="@+id/community_writing_category_under_btn"
-            android:layout_width="14dp"
-            android:layout_height="7dp"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/under_vector"
-            app:layout_constraintBottom_toBottomOf="@id/community_writing_category_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/community_writing_category_tv" />
+            android:textColor="@color/gray_scale8"
+            android:theme="@style/SpinnerTheme"
+            android:background="@drawable/background_spinner_option"
+            android:dropDownWidth="250dp"
+            android:popupBackground="@color/white"
+            android:overlapAnchor="false"
+            app:layout_constraintWidth_percent="0.95"
+            app:layout_constraintTop_toTopOf="@id/divider1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/divider2" />
 
         <FrameLayout
             android:id="@+id/category_dialog_container"
@@ -85,11 +78,11 @@
             android:visibility="gone"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/community_writing_category_under_btn"
+            app:layout_constraintTop_toBottomOf="@id/community_select_category"
             app:layout_constraintEnd_toEndOf="parent">
 
             <include
-                layout="@layout/dialog_select_category" />
+                layout="@layout/item_select_category" />
         </FrameLayout>
 
 
@@ -99,7 +92,7 @@
             android:layout_height="2dp"
             android:background="@color/gray_scale4"
             android:layout_marginTop="15dp"
-            app:layout_constraintTop_toBottomOf="@id/community_writing_category_tv"
+            app:layout_constraintTop_toBottomOf="@id/community_select_category"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <EditText
@@ -107,12 +100,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="제목을 작성해 주세요"
+            android:textColorHint="@color/gray_scale6"
             android:background="@android:color/transparent"
             android:inputType="none"
             android:singleLine="true"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/gray_scale5"
+            android:textColor="@color/gray_scale8"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             app:layout_constraintTop_toBottomOf="@id/divider2"
@@ -161,8 +154,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="자유롭게 글을 작성해 주세요.(최소 10자 이상)"
+            android:textColorHint="@color/gray_scale6"
             android:background="@android:color/transparent"
+            android:textColor="@color/gray_scale8"
             android:inputType="none"
+            android:imeOptions="actionDone"
             android:layout_marginTop="15dp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
