--- a/app/src/main/res/layout/dialog_custom.xml
+++ b/app/src/main/res/layout/dialog_custom.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="7dp"
-    android:background="@drawable/dialog_style">
+    android:background="@drawable/background_spinner_option">
 
 
     <ImageView
